--- a/assets/css/theme.css
+++ b/assets/css/theme.css
@@ -2,11 +2,14 @@
 @import url("https://fonts.googleapis.com/css2?family=Lexend+Deca:wght@100..900&family=Outfit:wght@100..900&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap");
 @import "./navbar.css";
 @import "./buttons.css";
+@import "./background.css";
+@import "./inputs.css";
+
 /* end  import */
 /* color configs */
 :root {
-  --bg-pink: #ffbad1;
-  --bg-pink-hover: #f89ebc;
+  --bg-pink: #ffc0cb;
+  --bg-pink-hover: #ffa2b2;
   --bg-black: #010101;
   --bg-grey: #5a5a5a;
   --bg-grey-2: #f3f3f3;
